# silly-kicks

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: DEFERRED.md
docs/c4/: architecture.dsl  architecture.html
docs/examples/: README.md  pff_wc2022_walkthrough.py
docs/plans/: 2026-04-06-phase1-clean-import.md  2026-04-06-phase3a-bug-fixes.md  2026-04-06-phase3b-io-contract.md  2026-04-06-phase3c-converter-rewrite.md  2026-04-06-phase3d-vaep-evolution.md
docs/specs/: 2026-04-06-phase3b-io-contract-design.md  2026-04-06-phase3c-converter-rewrite-design.md  2026-04-06-phase3d-vaep-evolution-design.md  2026-04-06-silly-kicks-design.md
scripts/: build_lakehouse_ci_fixtures.py  build_worldcup_fixture.py  extract_provider_fixtures.py  probe_action_context_baselines.py  probe_preprocess_baseline.py  probe_tracking_baselines.py  regenerate_action_context_baselines.py  regenerate_pressure_snapshot_shas.py  regenerate_provider_defaults.py
silly_kicks/: __init__.py  _nan_safety.py  xthreat.py
silly_kicks/atomic/: __init__.py
silly_kicks/data/: base.py
silly_kicks/spadl/: __init__.py  _wyscout_events.py  _wyscout_mappings.py  base.py  config.py  kloppy.py  metrica.py  opta.py  orientation.py  pff.py  schema.py  sportec.py  statsbomb.py  utils.py  wyscout.py
silly_kicks/tracking/: __init__.py  _direction.py  _kernels.py  feature_framework.py  features.py  kloppy.py  pff.py  pressure.py  schema.py  sportec.py  utils.py
silly_kicks/vaep/: __init__.py  base.py  feature_framework.py  features.py  formula.py  hybrid.py  labels.py  learners.py
tests/: conftest.py  test_add_pre_shot_gk_context_extended.py  test_adr005_amendment_compliance.py  test_benchmark.py  test_derive_velocities.py  test_enrichment_nan_safety.py  test_enrichment_provider_e2e.py  test_gk_role_goalkeeper_ids.py  test_interpolate_frames.py  test_notice_md_format.py  test_pre_shot_gk_angle.py  test_preprocess_baseline_integrity.py  test_preprocess_config.py  test_public_api_examples.py  test_pyright_clean_tracking_features.py  test_resolve_preprocess.py  test_smooth_frames.py  test_sync_score.py  test_todo_md_format.py  test_tracking_converter_preprocess_kwarg.py  test_tracking_cross_provider_parity.py  test_tracking_kloppy.py  test_tracking_pff.py  test_tracking_real_data_sweep.py  test_tracking_realistic_fixtures.py  test_tracking_schema.py  test_tracking_sportec.py  test_tracking_utils_derive_speed.py  test_tracking_utils_link.py  test_tracking_utils_play_left_to_right.py  test_tracking_utils_slice.py  test_xthreat.py
tests/_vendored/: unravelsports_tti.py
tests/atomic/: _atomic_test_fixtures.py  test_atomic_add_gk_distribution_metrics.py  test_atomic_add_gk_role.py  test_atomic_add_possessions.py  test_atomic_add_pre_shot_gk_context.py  test_atomic_coverage_metrics.py  test_atomic_cross_validation.py  test_atomic_features.py  test_atomic_labels.py  test_atomic_orientation.py  test_atomic_spadl.py  test_atomic_vaep.py  test_atomic_validate_spadl.py  test_features_per_concern_import.py  test_preserve_native_atomic.py
tests/data/: test_base.py  test_load_opta.py  test_load_statsbomb.py  test_load_wyscout.py
tests/datasets/: download.py
tests/invariants/: _loaders.py  test_direction_of_play.py  test_gk_position.py  test_input_convention_detector.py  test_invariant_gk_angle_bounds.py  test_invariant_gk_angle_per_period_dop_symmetry.py  test_invariant_interpolate_passes_through.py  test_invariant_smooth_frames_constant_signal.py  test_invariant_smooth_frames_idempotence.py  test_invariant_sync_score_bounds.py  test_invariant_velocity_physical_plausibility.py  test_vaep_geometric_sanity.py
tests/spadl/: _gk_test_fixtures.py  _golden_pre_shot_gk_context_v280.parquet  conftest.py  test_add_gk_distribution_metrics.py  test_add_gk_role.py  test_add_possessions.py  test_add_pre_shot_gk_context.py  test_coverage_metrics.py  test_cross_provider_parity.py  test_kloppy.py  test_metrica.py  test_opta.py  test_orientation.py  test_output_contract.py  test_pff.py  test_schema.py  test_sportec.py  test_statsbomb.py  test_use_tackle_winner_as_actor.py  test_wyscout.py
tests/tracking/: _provider_inputs.py  test_action_context_cross_provider.py  test_action_context_expected_output.py  test_action_context_real_data_sweep.py  test_add_action_context.py  test_atomic_standard_parity.py  test_bekkers_e2e_via_derive_velocities.py  test_empirical_action_context_baselines.py  test_feature_framework.py  test_features_standard.py  test_kernels.py  test_pre_window_features.py  test_pre_window_perf_budget.py  test_pressure_andrienko.py  (+9 more)
(+140 files in other folders)
