[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silly-kicks"
version = "1.1.0"
description = "Classify and value on-ball football actions using SPADL and VAEP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Karsten S. Nielsen" },
]
keywords = ["soccer", "football", "analytics", "SPADL", "VAEP", "actions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.1.1",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.1",
]

[project.optional-dependencies]
kloppy = ["kloppy>=3.15.0"]
xgboost = ["xgboost>=2.0.0"]
catboost = ["catboost>=1.2"]
lightgbm = ["lightgbm>=4.0"]
test = [
    "pytest>=7.4.2",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.380",
]

[project.urls]
Homepage = "https://github.com/karsten-s-nielsen/silly-kicks"
Repository = "https://github.com/karsten-s-nielsen/silly-kicks"

[tool.hatch.build.targets.wheel]
packages = ["silly_kicks"]

# --- Ruff ---
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "N806"]
# ML convention: uppercase X, Y, Pscores, Pconcedes are standard in ML/stats code
"silly_kicks/vaep/**/*.py" = ["N803", "N806"]
"silly_kicks/atomic/vaep/**/*.py" = ["N803", "N806"]
"silly_kicks/xthreat.py" = ["N803", "N806", "E741"]
# False positive: ruff S105 flags string literals like "Free Kick" as "hardcoded passwords"
# because they're compared to variables named pass_type, shot_type, etc.
"silly_kicks/spadl/statsbomb.py" = ["S105"]

[tool.ruff.lint.isort]
known-first-party = ["silly_kicks"]

# --- Pyright ---
[tool.pyright]
include = ["silly_kicks"]
pythonVersion = "3.10"
typeCheckingMode = "basic"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring downloaded datasets",
]
